# esame/Server/swagger-output.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Gestione utenti",
-    "description": "API per la gestione utenti",
+    "title": "Gestione AFSE",
+    "description": "API per la gestione di AFSE",
     "version": "1.0.0"
   },
   "servers": [
@@ -151,6 +151,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -177,6 +180,71 @@
                 "$ref": "#/components/schemas/changeSchema"
               }
             }
+          }
+        }
+      }
+    },
+    "/addtrade": {
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/addtradeSchema"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/trade/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/getTrades": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -297,6 +365,40 @@
           "password",
           "credit",
           "favhero"
+        ]
+      },
+      "addtradeSchema": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "userID"
+          },
+          "offered": {
+            "type": "array",
+            "example": [
+              1234,
+              5678
+            ],
+            "items": {
+              "type": "number"
+            }
+          },
+          "received": {
+            "type": "array",
+            "example": [
+              1234,
+              5678
+            ],
+            "items": {
+              "type": "number"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "offered",
+          "received"
         ]
       }
     }
